19_bits_arr/grade.txt
Grading at Mon Mar  2 17:25:20 UTC 2020
Attempting to compile numToBits.c
numToBits.c: In function ‘numToBits’:
numToBits.c:46:25: error: ‘num’ undeclared (first use in this function)
  bits[i*32+k]=getNthBit(num[i],k);
                         ^
numToBits.c:46:25: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
